# pi-cv

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONVERSATION.md  DOCUMENTATION.md  EFFECTS.md  PLAN.md  README.md  assignment.md  conanfile.py  effect.md  lab7.md  main.cpp
.github/: copilot-instructions.md
.github/agents/: image-lab-cpp.agent.md
docs/: lab8_explained.md
docs/superpowers/plans/: 2026-04-23-lab8-and-ui-rework.md  2026-04-23-lab8-statistical-properties.md
scripts/: conan_build.sh  conan_install.sh
src/color_spaces/: spaces.cpp  spaces.h
src/common/: common.h  output_images.h
src/common/file/: file_utils.cpp  file_utils.h
src/controls/: controls_manager.cpp  controls_manager.h
src/effects/: additive_factor.cpp  additive_factor.h  assignment.cpp  assignment.h  bi_level_color_map.cpp  bi_level_color_map.h  boundary_margin_code.cpp  boundary_margin_code.h  boundary_reconstruct_from_code.cpp  boundary_reconstruct_from_code.h  contour_and_region_fill_lab7.cpp  contour_and_region_fill_lab7.h  filter_objects_by_area_orientation.cpp  filter_objects_by_area_orientation.h  floyd_steinberg.cpp  floyd_steinberg.h  general_filter.cpp  general_filter.h  gray_level_reduction.cpp  gray_level_reduction.h  histogram_and_pdf.cpp  histogram_and_pdf.h  histogram_m_bins.cpp  histogram_m_bins.h  hsv_hue_quantization.cpp  hsv_hue_quantization.h  lab8_auto_binarize.cpp  lab8_auto_binarize.h  lab8_histogram_equalization.cpp  lab8_histogram_equalization.h  lab8_statistics.cpp  lab8_statistics.h  lab8_transforms.cpp  lab8_transforms.h  labeling_compare.cpp  labeling_compare.h  morphology_lab7_combined.cpp  morphology_lab7_combined.h  multiplicative.cpp  multiplicative.h  (+8 more)
src/helpers/: chain_code.cpp  chain_code.h  geometry.cpp  geometry.h  global_state.cpp  global_state.h  histogram.cpp  histogram.h  image_utils.cpp  image_utils.h  labeling.cpp  labeling.h  morphology.cpp  morphology.h  rendering.cpp  rendering.h  types.h
src/slider/: slider.cpp  slider.h
